Polish hackathon submission: fix bugs, wire features, add UI polish, improve docs
- Fix Dockerfile no-op apt-get install, add .dockerignore
- Wire up Firestore persistence (save_meeting_summary, save_meeting_state)
- Fix nudge badge counter never updating in sidebar
- Replace fragile 10s setTimeout with event-driven summary close (30s fallback)
- Resend meeting config on WebSocket reconnect to restore server context
- Validate incoming config with Pydantic MeetingConfig model
- Add summary export: Copy to Clipboard and Download Markdown buttons
- Add connection status indicator (green/red/yellow dot) in meeting info bar
- Add mic level pulsing dot using RMS audio level via requestAnimationFrame
- Overhaul README: Mermaid diagram, prerequisites check, troubleshooting table
- Add Apache 2.0 LICENSE
- Add server endpoint tests (health + root), add httpx to requirements
- Add deploy.sh preflight checks: gcloud CLI, env var, API enablement

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,12 +60,17 @@
                 <!-- Info bar -->
                 <div class="meeting-info-bar">
                     <span class="meeting-name" id="meeting-name-display">Meeting</span>
+                    <span class="connection-status" id="connection-status">
+                        <span class="connection-dot connected" id="connection-dot"></span>
+                        <span id="connection-text">Connected</span>
+                    </span>
                     <span id="meeting-timer">00:00 / 30:00</span>
                 </div>
 
                 <!-- Controls -->
                 <div class="meeting-controls">
                     <button id="toggle-mic-btn" class="btn btn-secondary">Unmute Mic</button>
+                    <span class="mic-level-dot" id="mic-level-dot"></span>
                     <button id="toggle-screen-btn" class="btn btn-secondary">Share Screen</button>
                     <div style="flex:1"></div>
                     <button id="end-meeting-btn" class="btn btn-danger">End Meeting</button>
